# Pivot

./: .gitignore  CMakeLists.txt  README.md  data_spliter.cc  main.cpp  run.sh  run_energy_dt.sh  run_energy_gbdt.sh  run_energy_rf.sh
data/air_quality_data/: air_quality.data  client_0.txt  client_1.txt  client_2.txt
data/appliances_energy_prediction_data/: client_0.txt  client_1.txt  client_2.txt
data/cardiotocography_data/: cardiotocography.data  client_0.txt  client_1.txt  client_2.txt
data/credit_card_1_data/: client_0.txt  client_1.txt  client_2.txt
scripts/: proto_gen.sh
src/client/: Client.cpp  Client.h
src/include/: common.h
src/include/meta/: cart.proto  common.proto  logistic.proto
src/include/protobuf/: cart.pb.cc  cart.pb.h  common.pb.cc  common.pb.h  logistic.pb.cc  logistic.pb.h
src/models/: cart_tree.cpp  cart_tree.h  feature.cpp  feature.h  feature_splits.cpp  feature_splits.h  gbdt.cpp  gbdt.h  logistic_regression.cpp  logistic_regression.h  random_forest.cpp  random_forest.h  tree_node.cpp  tree_node.h
src/utils/: djcs_aux.cpp  djcs_aux.h  djcs_t_aux.cpp  djcs_t_aux.h  encoder.cpp  encoder.h  pb_converter.cpp  pb_converter.h  pcs_t_aux.cpp  pcs_t_aux.h  score.cpp  score.h  util.cpp  util.h
src/utils/spdz/: spdz_util.cpp  spdz_util.h
tests/: test_djcs_t_aux.cpp  test_djcs_t_aux.h  test_encoder.cpp  test_encoder.h  test_logistic_regression.cpp  test_logistic_regression.h  test_pb_converter.cpp  test_pb_converter.h
tools/: DT_RF_GDBT.py  README.md  data_spliter  data_spliter.cc  data_spliter_ext  requirements.txt  visualize.py
tools/MP-SPDZ/: README.md  README.txt
tools/SCALE-MAMBA/: IO.h  Input_Output_File_Sfix.cpp  Input_Output_File_Sfix.h  Makefile  Online.cpp  Online.h  Player.cpp  REDAME.txt  RunTime.cpp  RunTime.h
tools/SCALE-MAMBA/Player/: Player.cpp  Player.h
tools/SCALE-MAMBA/batch_sfix/: batch_sfix-0.bc  batch_sfix.mpc  batch_sfix.sch
tools/SCALE-MAMBA/batch_sfix/files/input/: player0.txt  player1.txt  player2.txt
tools/SCALE-MAMBA/batch_sfix/files/output/: output0.txt  output1.txt  output2.txt
tools/SCALE-MAMBA/batch_sfix/mpc_files/: output1.txt  player0.txt  player1.txt  player2.txt
tools/SCALE-MAMBA/src/: Makefile
tools/utils/: __init__.py  data_generator.py  dataloader.py
